# weaklink-9a3ice

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  readme-pypi.md  results.md
.github/workflows/: publish-pypi.yaml  quality.yaml  release.yaml
examples/: example.schema.json  rx_live.py  tx_live.py
minimodem_rs/: helpers.py
scripts/: build_pypi_readme.py
src/weaklink/modem/: __init__.py  audio.py  benchmark.py  cli.py  codec.py  constants.py  exceptions.py  streaming.py  waveform.py
tests/: _streaming.py  test_cliff_monotonic.py  test_llr_combining.py  test_mfsk_num_tones.py  test_modem_end_to_end.py  test_modem_fec.py  test_modem_file_pipe.py  test_modem_waveform.py  test_nyquist_symmetry.py  test_periodic_noise.py  test_preamble_correlator.py  test_public_api.py  test_sequential_tx.py  test_streaming_no_dupe.py  test_streaming_starts_on_silence.py  test_streaming_tx.py  test_wav_damage.py
tests_weaklink/: test_below_noise_floor_wavs.py  test_cliff_monotonic.py  test_framing.py  test_llr_combining.py  test_mfsk_num_tones.py  test_modem_end_to_end.py  test_modem_file_pipe.py  test_modem_interleaver.py  test_modem_weak_signal.py  test_periodic_noise.py  test_pn.py  test_sequential_tx.py  test_simulator_sweep.py  test_streaming_tx.py  test_sync.py  test_wav_damage.py
weaklink/: __init__.py  benchmark.py  cli.py  framing.py  ldpc.py  pn.py  rs.py  simulator.py  sync.py  transport.py
weaklink/modem/: __init__.py  _streaming.py  api.py  audio.py  cli.py  codec.py  constants.py  fec.py  interleaver.py  waveform.py
weaklink/protocol/: __init__.py  schema.py
