[tool.poetry]
name = "weaklink-9a3ice"
version = "0.0.0"
description = "4-FSK streaming modem for HF SSB and wider channels: Reed-Solomon framing, soft Viterbi, round-robin block repetition, byte-pipe semantics."
authors = ["Ivica"]
packages = [{ include = "weaklink" }]

[tool.poetry.dependencies]
python = "^3.10"
reedsolo = "^1.7.0"
numpy = "^2.0"
soundfile = "^0.12"
sounddevice = "^0.5"

[tool.poetry.group.dev.dependencies]
black = "26.3.1"
isort = "8.0.1"
pre-commit = "4.6.0"
pytest = "9.0.3"
mypy = "^2.1.0"
pylint = "^4.0.5"
setuptools = "82.0.1"

[tool.poetry.scripts]
weaklink-9a3ice = "weaklink.modem.cli:main"
weaklink-benchmark = "weaklink.benchmark:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.venv
  | build
  | venv
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
markers = [
    "slow: SNR-sweep integration tests; run explicitly with `-m slow`",
]

[tool.mypy]
python_version = "3.10"
files = ["weaklink", "tests_weaklink"]
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
