[tool.poetry]
name = "weaklink-modem"
version = "0.0.0"
description = "N-FSK streaming modem for HF SSB and wider channels: Reed-Solomon framing, soft Viterbi, round-robin block repetition, byte-pipe semantics."
authors = ["Ivica"]
readme = "readme-pypi.md"
packages = [{ include = "weaklink/modem" }]

[tool.poetry.dependencies]
python = "^3.10"
reedsolo = "^1.7.0"
numpy = "^2.0"
soundfile = "^0.12"
sounddevice = "^0.5"

[tool.poetry.group.dev.dependencies]
black = "26.3.1"
isort = "8.0.1"
pre-commit = "4.6.0"
pytest = "9.0.3"
mypy = "^2.1.0"
pylint = "^4.0.5"
setuptools = "82.0.1"
pytest-xdist = "^3.8.0"

[tool.poetry.scripts]
weaklink-modem = "weaklink.modem.cli:main"
weaklink-modem-benchmark = "weaklink.modem.benchmark:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.venv
  | build
  | venv
  | dist
)/
'''

[tool.pytest.ini_options]
addopts = "-n auto"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
files = ["weaklink", "tests_weaklink"]
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
